...
    Column(
        modifier = modifier,
        verticalArrangement = Arrangement.spacedBy(4.dp),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        Text(
            text = if (name != null && name != "{name}") "Календарь $name" else "Календарь",
            fontSize = 20.sp,
            fontWeight = FontWeight.Medium,
            color = Color.White
        )
        Text(
            text = "сегодня: " + date,
...
@Composable
private fun MenuButton(isFromMenu: Boolean, onMenuClick: () -> Unit) {
    IconButton(onClick = onMenuClick) {
        if (isFromMenu) {
            Icon(
                Icons.Rounded.Menu,
                contentDescription = "Menu Button",
                modifier = Modifier.size(28.dp),
                tint = Color.White
            )
        } else {
            Icon(
                Icons.AutoMirrored.Rounded.ArrowBack,
...
        )
    }

    IconButton(onClick = { showFilterDialog.value = true }) {
        Icon(
            Icons.Rounded.Settings,
            contentDescription = "Настройки и фильтры",
            modifier = Modifier.size(28.dp),
            tint = Color.White
        )
    }

    val showOnlyWithPredictions = remember { mutableStateOf(false) }
...
